# gauntlet-harness

./: .dockerignore  .gitignore  Dockerfile  HARNESS.md  README.md  pyproject.toml  render.yaml
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  styles.css  types.ts
dashboard/src/components/: DocPanel.tsx  InputPanel.tsx  LiveLoopView.tsx  MetricsPanel.tsx  SymbolCard.tsx  TriagePanel.tsx
dashboard/src/data/: mockEvents.ts
dashboard/src/hooks/: useHarnessRun.ts  useHarnessState.ts
examples/: geometry.py  math_utils.py  planted_bug.py  string_utils.py
src/harness/: __init__.py  contracts.py  harness.py
src/harness/adapters/: __init__.py  cli.py  events.py  http.py
src/harness/alarms/: __init__.py  emit.py  types.py
src/harness/checkpoints/: __init__.py  behavioral.py  example.py  runner.py  sandbox.py  signature.py
src/harness/escalation/: __init__.py  handlers.py
src/harness/guardrails/: __init__.py  enforce.py  rules.py
src/harness/material/: __init__.py  loader.py  renderer.py
src/harness/observability/: __init__.py
src/harness/persistence/: __init__.py  store.py
src/harness/worker/: __init__.py  base.py  llm_worker.py  prompts.py
tests/: test_alarms_emit.py  test_checkpoints.py  test_escalation.py  test_foundation.py  test_guardrails.py  test_harness.py  test_http.py  test_material.py  test_sandbox.py  test_smoke.py  test_worker.py
