[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gauntlet-harness"
version = "0.0.0"
description = "Verified Documentation Harness — structured claims, verified against real code."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-api>=1.20",
]

[project.optional-dependencies]
# Pulled in by later sessions (worker transports, http adapter). Declared here so the
# dep list is complete, but NOT imported by the Session 0 foundation.
workers = [
    "anthropic>=0.40",
    "openai>=1.0",
]
http = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
# Optional OTLP export (Langfuse Cloud). Absent → init_telemetry degrades to a no-op.
otel = [
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
